--- a/ClujPugWeb/Properties/launchSettings.json
+++ b/ClujPugWeb/Properties/launchSettings.json
@@ -1,15 +1,6 @@
 {
   "profiles": {
-    "http": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
-    "https": {
+    "ClujPugWeb": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
